add timesheet view add encoding npm

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cheerio": "^0.22.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "encoding": "^0.1.12",
     "express": "~4.13.4",
     "express-authentication": "^0.3.2",
+    "iconv": "^2.2.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
